[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI/SaveViewUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/UI/GameStart.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/UI/MenuChangeButton.gd" type="Script" id=3]
[ext_resource path="res://assets/scripts/UI/backButton.gd" type="Script" id=4]
[ext_resource path="res://assets/scripts/UI/dual_button.gd" type="Script" id=5]
[ext_resource path="res://scenes/UI/NameSelector.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]

[node name="GameStart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="mainContainer" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
theme = SubResource( 1 )

[node name="Content" type="VSplitContainer" parent="mainContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.8
split_offset = 14

[node name="ContentInside" type="Panel" parent="mainContainer/Content"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 384.0
margin_bottom = 114.0
rect_min_size = Vector2( 200, 100 )
script = ExtResource( 5 )

[node name="savePicker" parent="mainContainer/Content/ContentInside" groups=["menu_root"] instance=ExtResource( 1 )]
visible = false

[node name="NewGameNameSelect" parent="mainContainer/Content/ContentInside" groups=["menu_root"] instance=ExtResource( 6 )]
visible = false

[node name="VScrollBar" type="VScrollBar" parent="mainContainer/Content/ContentInside" groups=["menu_root"]]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/Content/ContentInside/VScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="btnLoadGame" type="Button" parent="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer"]
margin_right = 384.0
margin_bottom = 20.0
text = "Load Game"
script = ExtResource( 3 )
BackButtonPath = NodePath("../../../../footer/backButton")
FromMenuPath = NodePath("../..")
ToMenuPath = NodePath("../../../savePicker")

[node name="btnNewGame" type="Button" parent="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer"]
margin_top = 24.0
margin_right = 384.0
margin_bottom = 44.0
text = "New Game"
script = ExtResource( 3 )
BackButtonPath = NodePath("../../../../footer/backButton")
FromMenuPath = NodePath("../..")
ToMenuPath = NodePath("../../../NewGameNameSelect")

[node name="Settings" type="Button" parent="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer"]
margin_top = 48.0
margin_right = 384.0
margin_bottom = 68.0
text = "Settings"

[node name="Credits" type="Button" parent="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer"]
margin_top = 72.0
margin_right = 384.0
margin_bottom = 92.0
text = "Credits"

[node name="exit" type="Button" parent="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer"]
margin_top = 96.0
margin_right = 384.0
margin_bottom = 116.0
text = "Exit"

[node name="footer" type="Panel" parent="mainContainer/Content"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 126.0
margin_right = 384.0
margin_bottom = 594.0

[node name="backButton" type="Button" parent="mainContainer/Content/footer"]
anchor_right = 0.328
anchor_bottom = 0.094
text = "Back"
script = ExtResource( 4 )

[connection signal="save_pressed" from="mainContainer/Content/ContentInside/savePicker" to="." method="_on_savePicker_save_pressed"]
[connection signal="text_entered" from="mainContainer/Content/ContentInside/NewGameNameSelect" to="." method="_on_NewGameNameSelect_text_entered"]
[connection signal="pressed" from="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer/btnLoadGame" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer/btnNewGame" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="mainContainer/Content/ContentInside/VScrollBar/VBoxContainer/exit" to="." method="_on_exit_pressed"]
